## gan_network.py

import tensorflow as tf
from gpt2_discriminator import GPT2_Discriminator
from gpt2_generator import GPT2_Generator
from custom_dataset import Custom_Dataset

class GAN_Network:
    def __init__(self):
        self.discriminator = GPT2_Discriminator()
        self.generator = GPT2_Generator()
        self.optimizer = tf.keras.optimizers.Adam()  # Define optimizer for GAN training

    def train_custom_dataset(self, data: dict, num_epochs: int) -> None:
        custom_data = Custom_Dataset()
        custom_data.load_dataset(data)

        for epoch in range(num_epochs):
            for batch in custom_data:
                self._train_step(batch)

    def _train_step(self, batch):
        with tf.GradientTape() as tape:
            # Forward pass through GAN network
            # Add your GAN training code here
            # For example:
            # real_data = batch['real_data']
            # generated_data = self.generator.generate_data()
            # disc_real = self.discriminator.discriminate(real_data)
            # disc_fake = self.discriminator.discriminate(generated_data)
            # gan_loss = self.compute_gan_loss(disc_real, disc_fake)
            # Add other relevant calculations for GAN training
        # Update weights based on gradients
        # Add your weight update code here
        # For example:
        # gradients = tape.gradient(gan_loss, self.generator.trainable_variables + self.discriminator.trainable_variables)
        # self.optimizer.apply_gradients(zip(gradients, self.generator.trainable_variables + self.discriminator.trainable_variables))

    def generate_question_answer_pair(self) -> (str, str):
        # Generate question-answer pair using the GPT-2 generator
        question, answer = self.generator.generate_question_answer_pair()
        return question, answer

    def compute_gan_loss(self, disc_real, disc_fake):
        # Add your GAN loss calculation code here
        # For example:
        # gan_loss = tf.reduce_mean(disc_fake - disc_real)
        return gan_loss
