
classDiagram
    class GAN_Network {
        -GPT2_Discriminator discriminator
        -GPT2_Generator generator
        +train_custom_dataset(data: dict) None
        +generate_question_answer_pair() (str, str)
    }
    class GPT2_Discriminator {
        -model
        +discriminate_question_answer_pair(question: str, answer: str) float
    }
    class GPT2_Generator {
        -model
        +generate_question_answer_pair() (str, str)
    }
    class Custom_Dataset {
        -data
        +load_dataset(path: str) dict
    }
    GAN_Network --> GPT2_Discriminator
    GAN_Network --> GPT2_Generator
    GAN_Network --> Custom_Dataset
